Fix:Text overlap

--- a/src/assets/styles/base.scss
+++ b/src/assets/styles/base.scss
@@ -318,7 +318,7 @@ $border-color: rgba(5, 5, 5, 0.06);
     border-block-end: 1px solid $border-color;
   }
   .glarity--popover-content {
-    width: 100px !important;
+    width: 120px !important;
   }
 
   .glarity--popover-inner {
